# example-rust-component-p2-no-wasi-imports

./: Cargo.toml  Justfile  README.md
src/: lib.rs
wit/: world.wit
